--- a/src/App/App.css
+++ b/src/App/App.css
@@ -8,6 +8,7 @@
 	width: 100%;
 	height: 100%;
 	max-height: 90vh;
+	margin: 0 1rem;
 	overflow: auto;
 	box-shadow: 0 2px 10px rgba(139,139,139,.25);
 	border-radius: 3px;
