--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -2,7 +2,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	height: 60px;
+	height: fit-content;
 	padding: 0 20px;
 	background: var(--azul);
 	color: #fff;
@@ -12,6 +12,7 @@
 .header-title {
 	font-weight: 400;
 	font-size: 24px;
+  padding: 1.5rem 0;
 }
 
 .header-button {
